@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE displaychannel SYSTEM "../../../dtd/displaychannel.dtd">
 
-<displaychannel x="0" y="0" width="100%" height="100%" shifttime="300" shifttype="bottom" shiftmode="slowed">
+<displaychannel x="0" y="0" width="100%" height="100%" shifttime="{channelShiftTime}" shifttype="bottom" shiftmode="slowed">
 	<background>
 			<area x="0" y="73%" width="100%" height="27%" layer="1">
 				<drawimage x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientChannelPNGT"/>
 			</area>
 	</background>
 
-	<scrapercontent detached="true" delay="300" fadetime="1000" >
+	<scrapercontent detached="true" delay="300" fadetime="500" >
 		<area condition="{hasposter}++{showChannelinfoPosterInline}" x="84%" y="78%" width="8%" height="18%" layer="2">
 				<drawimage x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="posterBG"/>
 			</area>
-		
-		
-		
 		<area condition="{hasposter}++{showChannelinfoPosterInline}" x="68%" y="79%" width="{areaheight}*{posterwidth}/{posterheight}" height="15%" layer="3">
 			<drawimage x="2%" valign="center" width="{areawidth}" height="{areaheight}" imagetype="image" path="{posterpath}" />
 		</area>
@@ -70,7 +67,7 @@
     {pressure}                  pressure in HPo
     {ozone}                     ozone value in DU
     -->
-	<currentweather  detached="true" delay="300" fadetime="1000">
+	<currentweather  detached="true" delay="300" fadetime="500" >
 		<area condition="{weatherInfo}" x="1%" y="96%" width="40%" height="4%" layer="3">
 			<drawimage name ="icon" x="0" y="0" valign="center" width="{areaheight}*0.9" height="{areaheight}*0.9" imagetype="icon" path="{icon}" />
 			<drawtext x="10%" y="0" valign="center" font="{light}" fontsize="60%" color="{clrLightGray}" text="min: {mintemperature}°C    max: {maxtemperature}°C    act: {temperature}°C" />
