@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE displaymessage SYSTEM "../../../dtd/displaymessage.dtd">
 
-<displaymessage x="0" y="85%" width="100%" height="10%" fadetime="{menuFadetime}">
+<displaymessage x="0" y="85%" width="100%" height="10%" fadetime="0" shifttime="{messageShiftTime}" shifttype="bottom" shiftmode="slowed">
 	<background>
 		<area x="0" y="0" width="100%" height="100%" layer="1">
 			<drawimage x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientChannel"/>
